Kiosk > Add Tube > Collection Date and Time appear more evenly spaced while preventing wrapping
CVDLS-161

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -35,3 +35,12 @@ body {
     height: 0;
     padding: 0;
 }
+
+.collection-date-widget, .collection-time-widget {
+    text-align:center;
+}
+
+.collection-date-widget .control-label,
+.collection-time-widget .control-label {
+    display:block
+}
